[package]
name = "dtchat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
socket-engine = { path = "../socket-engine" }
a_sabr = { path = "../a-sabr", features = ["contact_work_area", "contact_suppression"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.41"
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"

[features]
with_delay = ["socket-engine/with_delay"]
