[package]
name = "dtchat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
socket-engine = { git = "https://github.com/DTN-MTP/socket-engine" , branch = "main" }
a_sabr = { git ="https://github.com/DTN-MTP/A-SABR.git", branch = "main", features = ["contact_work_area", "contact_suppression"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.41"
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"

[features]
with_delay = ["socket-engine/with_delay"]
